--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10944,10 +10944,25 @@ a.text-dark:focus {
 
 .card-deck {
   margin: 24px 20px;
+  display: flex;
+  flex-wrap: wrap;
 }
 
-.card-img-top {
+.card-deck .card {
+  flex-basis: 300px;
+  margin-bottom: 20px;
+}
+
+.card-deck .card .card-img-top {
   width: 100%;
   height: 500px;
+}
+
+.adds {
+  margin: 30px;
+}
+
+.container {
+  margin: 20px 0;
 }
 
