--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,11 +1,26 @@
 @import 'node_modules/bootstrap/scss/bootstrap';
 .card-deck {
     margin: 24px 20px;
-    
-}
-
-.card-img-top {
+    display: flex;
+    flex-wrap: wrap;
+.card{
+  flex-basis: 300px;
+   margin-bottom: 20px;
+   
+    .card-img-top {
     width: 100%;
     height: 500px;
     
 }
+}  
+
+
+}
+.adds{
+    margin: 30px;
+}
+.container{
+    margin: 20px 0;
+}
+
+
